--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,14 @@
   <div class="container">
     <%= flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
-    <% end %>     
+    <% end %>
+    <% if current_user %>
+        <%= link_to "Logout", logout_path, method: :delete %>
+    <% else %>
+        <%= link_to "Login", login_path %>
+    <% end %>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
   </body>
 </html>
